<?xml version="1.0" encoding="utf-8"?>
<!--NIM   : 10116463 -->
<!--Nama  : Mochamad Fajar Ismatulloh -->
<!--Kelas : AKB-11 -->
<!--TGL   : 04/04/2019-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitetree"
    android:orientation="vertical"
    tools:context=".Welcome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="24dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/nama"
            android:textColor="@color/Hitam"
            android:textSize="28sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isinama"
            android:layout_below="@+id/nama"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_regular"
            android:inputType="text"
            android:paddingBottom="24dp"
            android:hint="@string/hintnama"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/umur"
            android:layout_below="@+id/isinama"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/umur"
            android:textColor="@color/Hitam"
            android:layout_marginTop="20dp"
            android:textSize="28sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isiumur"
            android:layout_below="@+id/umur"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_regular"
            android:inputType="number"
            android:paddingBottom="24dp"
            android:hint="Contoh : 12"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:background="@drawable/buttonrounded1"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btnNext"
            android:textAllCaps="false"
            android:textColor="@color/Hitam"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>